# voronoi-generator

./: Cargo.toml  README.md  build.rs  test.ppm
src/: main.rs
src/display/: mod.rs  window_config.rs
src/render/: camera.rs
src/render/opengl/: gl_shader.rs
src/voronoi/: export.rs  mod.rs  seed.rs
